# Traffic-Core

./: CMakeLists.txt  README.md  ma_route.cpp  main.cpp  route.cpp
Projet_final/: README.md
TrafficCore/: .ninja_log  CMakeLists.txt  Cmakelists.txt  README.md  build.ninja  route_multi_voie.cpp
TrafficCore/assets/models/: bustanger.glb
TrafficCore/demos/: boukhalf_simulation.cpp  main.cpp  test_roads.cpp
TrafficCore/include/: Intersection.h  Node.h  RoadNetwork.h  RoadSegment.h
TrafficCore/include/Vehicules/: Car.h  TrafficManager.h  Vehicule.h
TrafficCore/include/geometry/: CurvedGeometry.h  RoadGeometryStrategy.h  RoundaboutGeometry.h  StraightGeometry.h
TrafficCore/src/: Intersection.cpp  Node.cpp  RoadNetwork.cpp  RoadSegment.cpp
TrafficCore/src/geometry/: CurvedGeometry.cpp  RoundaboutGeometry.cpp  StraightGeometry.cpp
TrafficCore/src/vehicles/: Car.cpp  CarFactory.cpp  TrafficManager.cpp  Vehicule.cpp
assets/models/: teslanoir.glb
include/: Bus.h  Car.h  Intersection.h  ModelManager.h  SimulationManager.h  Truck.h  Vehicule.h  VehiculeFactory.h
include/geometry/: RoadGeometryStrategy.h  StraightGeometry.h
src/: Bus.cpp  Car.cpp  ModelManager.cpp  Node.cpp  SimulationManager.cpp  Truck.cpp  Vehicule.cpp  VehiculeFactory.cpp
src/geometry/: RoundaboutGeometry.cpp
